prevent hero unit text from breaking mobile layout if its too long

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -320,6 +320,7 @@ footer.footer {
 	background: #56BCDA;
 	color: white;
 	padding: 30px;
+	word-wrap: break-word;
 }
 
 .users-box{
